Made text smaller for the search-filter-search-bar

--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -44,6 +44,7 @@ $status-red: #d14242;
 $navbar-height: 60px;
 $edit-account-modal-height: 480px;
 $search-filter-sort-bar-height: 60px;
+$search-filter-sort-bar-button-height: 28px;
 $search-bar-height: 28px;
 $list-table-row-height: 50px;
 $status-box-height: 25px;
@@ -73,7 +74,7 @@ $display-info-field-margin-left: 11px;
 // Borders
 //==========
 $search-filter-sort-bar-border-width: 1px;
-$search-bar-border-width: 1px;
+$search-bar-border-width: 2px;
 $top-bar-border-width: 1px;
 $list-sidebar-border-width: 2px;
 
