--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerSearchFilterSortBar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerSearchFilterSortBar.scss
@@ -26,13 +26,19 @@
 		@include stop-text-selection();
 		@include vertical-center();
 
-		margin-left: 15px;
+		margin-left: 30px;
 		border: 1px solid black;
 		background-color: white;
-		padding: 7px;
-		width: 120px;
+		height: $search-filter-sort-bar-button-height;
+		width: 110px;
+		font-size: 16px;
 		text-align: center;
 		cursor: pointer;
+	}
+
+	.centering-container__new-item-button__text {
+		@include dead-center();
+		white-space: nowrap;
 	}
 
 	.centering-container__search-group-container {
@@ -94,13 +100,13 @@
 		// ...so its top border can be covered to make the two containers look like one
 		z-index: 1;
 		position: absolute;
-		top: 13px;
-		right: 16px;
+		top: 15px;
+		right: 30px;
 		border: 1px solid black;
 		background-color: white;
-		height: 30px;
+		height: $search-filter-sort-bar-button-height;
 		width: $filter-button-width;
-		font-size: 20px;
+		font-size: 16px;
 		text-align: center;
 		cursor: pointer;
 	}
@@ -123,9 +129,9 @@
 	.filter-area-container__dropdown-container__content-dropdown {
 		position: absolute;
 		/* top: 41px; */
-		top: 65px;
+		top: 67px;
 		// 2px less than button since border resize moves the button
-		right: 14px;
+		right: 28px;
 		border: 3px solid black;
 		background-color: white;
 		height: 200px;
