--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerDisplayInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerDisplayInfo.scss
@@ -5,9 +5,9 @@
 // ...SCSS shared with other components is in itemContainer.scss 
 .item-container-component {
 	.item-name {
-		padding: 13px 0px 6px 0px;
+		padding: 13px 0px 3px 0px;
 		text-align: center;
-		font-size: 175%;
+		font-size: $display-edit-info-name-font-size;
 	}
 
 	.item-box__group__field__type {
