--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerSidebarTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerSidebarTableAndRows.scss
@@ -47,6 +47,7 @@
 		height: 90vh;
 		// Width must be set here again to not go beyond
 		width: $list-sidebar-width;
+		font-size: $base-font-size;
 		font-family: Arial, Helvetica, sans-serif;
 		overflow-y: auto !important;
 		overflow-x: hidden !important;
@@ -78,18 +79,19 @@
 	}
 
 	.list-sidebar__table__header {
+		// Must be more than table__data rows below do not overlap when scrolling
+		z-index: 1;
 		position: -webkit-sticky;
 		position: sticky;
+		top: 0px;
 		background-color: $list-table-background-color;
 		// Used box shadow since the header row being sticky with
 		// ...background-color applied keeps the bottom-border from appearing
 		box-shadow: 0 1px 0 $medium-gray;
+		width: $list-sidebar-width;
 	}
 
 	.list-sidebar__table__data {
-		padding: 0px 7px 0px 7px;
-		width: $list-sidebar-width;
-		max-width: $list-sidebar-width;
 		color: $blue-link;
 		white-space: nowrap;
 		overflow: hidden;
@@ -99,5 +101,15 @@
 
 	.list-sidebar__table__data--red {
 		color: $red-link;
+	}
+
+	.list-sidebar__table__data__overflow-container {
+		@include horizontal-center();
+
+		width: $list-sidebar-width - 25;
+		max-width: $list-sidebar-width - 25;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 }
