--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerTableAndRows.scss
@@ -10,6 +10,7 @@
 	// ...to make modal resize (using js) look less jumpy
 	height: 90vh;
 	width: 100%;
+	font-size: $base-font-size;
 	font-family: Arial, Helvetica, sans-serif;
 	overflow-y: auto !important;
 	overflow-x: auto !important;
@@ -36,7 +37,7 @@
 	}
 
 	.list-table__header {
-		// Must be more than 0 so element in below rows do not overlap when scrolling
+		// Must be more than table__data rows below do not overlap when scrolling
 		z-index: 1;
 		position: -webkit-sticky;
 		position: sticky;
@@ -112,7 +113,7 @@
 		background-color: gray;
 		color: white;
 		height: $status-box-height;
-		width: 125px;
+		width: 115px;
 	}
 
 	.list-table__data__centering-container__status-box--purple {
