--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -59,10 +59,10 @@ $list-table-min-width: 1100px;
 $edit-account-modal-width: 540px;
 $create-item-sidebar-width: 500px;
 $list-table-item-name-width: 100px;
-$list-sidebar-width: 300px;
+$list-sidebar-width: 275px;
 $filter-button-width: 90px;
 $options-button-width: 36px;
-$item-outer-dividing-container-min-width: 500px;
+$item-outer-dividing-container-min-width: 525px;
 
 //=========
 // Margins
@@ -81,6 +81,8 @@ $list-sidebar-border-width: 2px;
 //======
 // Text
 //======
+$base-font-size: 15px;
+$display-edit-info-name-font-size: 28px;
 $common-line-height: 20px;
 
 //=========
