--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -35,7 +35,7 @@ $status-gray: $dark-gray;
 $status-purple: #9a82d8;
 $status-blue: #568DD5;
 $status-orange: #f59f3c;
-$status-green: #008000;
+$status-green: #007e00;
 $status-red: #d14242;
 
 //==========
