--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
@@ -105,6 +105,33 @@
 		display: inline-flex;
 	}
 
+	.item-box__form-character-counter {
+		float: right;
+		margin: 5px 2px 2px 0px;
+	}
+
+	.item-box__form-textarea {
+		outline: none;
+		margin-bottom: 10px;
+		border: 2px solid black;
+		background-color: white;
+		padding: 4px 8px 4px 8px;
+		height: 180px;
+		width: 100%;
+		line-height: $common-line-height;
+		font-family: Arial, Helvetica, sans-serif;
+		font-size: $base-font-size;
+		// sizing
+		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+		-moz-box-sizing: border-box; /* Firefox, other Gecko */
+		box-sizing: border-box; /* Opera/IE 8+ */
+		resize: none;
+	}
+
+	.item-box__form-textarea--shorter {
+		height: 100px;
+	}
+
 	.bottom-row-height-filler {
 		height: 65px;
 	}
