Added searchbar to item-container and fixed bug with searchbar

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerSidebarTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerSidebarTableAndRows.scss
@@ -66,12 +66,12 @@
 		@include border-line();
 		background-color: $list-table-background-color;
 		padding: 5px;
-		height: $list-table-row-height;
+		height: $list-item-table-row-height;
 		text-align: center;
 	}
 
 	.list-sidebar__table__row--empty {
-		height: $list-table-row-height + ($list-table-row-height * 0.5);
+		height: $list-item-table-row-height + ($list-item-table-row-height * 0.5);
 	}
 
 	.list-sidebar__table__row--selected {
