--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -48,28 +48,31 @@ $search-filter-sort-bar-button-height: 28px;
 $list-search-bar-height: 28px;
 $list-item-table-row-height: 50px;
 $status-box-height: 25px;
-$top-bar-height: 52px;
 $create-item-sidebar-height: 700px;
-$description-info-item-box-height: 300px;
+$top-bar-height: 52px;
+$edit-item-name-input-height: 43px;
+$edit-item-description-item-box-height: 300px;
 
 //=========
 // Widths
 //=========
-$list-table-min-width: 1100px;
 $edit-account-modal-width: 540px;
-$create-item-sidebar-width: 500px;
-$list-table-item-name-width: 100px;
-$list-sidebar-width: 275px;
-$expand-minimize-button-width: 25px;
 $filter-button-width: 90px;
+$list-table-min-width: 1100px;
+$list-table-item-name-width: 100px;
+$create-item-sidebar-width: 500px;
+$item-container-list-sidebar-width: 275px;
+$expand-minimize-button-width: 25px;
 $options-button-width: 36px;
-$item-outer-dividing-container-min-width: 525px;
+$item-container-outer-dividing-container-min-width: 525px;
+$edit-item-name-input-width: 600px;
+$edit-item-name-char-counter-container-width: 50px;
 
 //=========
 // Margins
 //=========
 $form-input-margin-bottom: 10px;
-$display-info-field-margin-left: 11px;
+$display-item-field-margin-left: 11px;
 $item-search-bar-margin-left: 10px;
 
 //==========
@@ -79,18 +82,21 @@ $search-filter-sort-bar-border-width: 1px;
 $list-search-bar-border-width: 2px;
 $list-item-search-bar-group-container-border-width: 1px;
 $top-bar-border-width: 1px;
-$list-sidebar-border-width: 2px;
+$edit-item-name-input-border-width: 2px;
+$item-container-list-sidebar-border-width: 2px;
 
 //=========
 // Padding
 //=========
 $list-search-bar-padding: 8px;
+$edit-item-name-input-padding: 4px;
 
 //======
 // Text
 //======
 $base-font-size: 15px;
-$display-edit-info-name-font-size: 28px;
+$slightly-larger-font-size: $base-font-size + 1px;
+$item-container-name-font-size: 28px;
 $common-line-height: 20px;
 
 //=========
@@ -105,6 +111,8 @@ $list-item-search-bar-button-height: $list-search-bar-height +
 	$list-search-bar-border-width * 2;
 $list-item-search-bar-button-width: $list-search-bar-height +
 	$list-search-bar-border-width * 2 + 10;
-$item-search-bar-width: $list-sidebar-width + ($list-sidebar-border-width * 2) +
+$item-search-bar-width: $item-container-list-sidebar-width + ($item-container-list-sidebar-border-width * 2) +
 	$expand-minimize-button-width - $item-search-bar-margin-left -
 	($list-item-search-bar-group-container-border-width * 2);
+$edit-item-name-name-centering-container-height: $edit-item-name-input-height +
+	($edit-item-name-input-border-width * 2) + ($edit-item-name-input-padding * 2);
