--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerTopBar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerTopBar.scss
@@ -1,7 +1,8 @@
 @import "../../../utils/variables";
 @import "../../../utils//mixins";
 
-.top-bar-component {
+.top-bar-component,
+.js-calc-top-bar-component {
 	// Must be more than the item-container in item-container.scss
 	z-index: 1;
 	position: fixed;
