--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerSearchFilterSortBar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerSearchFilterSortBar.scss
@@ -1,7 +1,8 @@
 @import "../../../utils/variables";
 @import "../../../utils//mixins";
 
-.search-filter-sort-component {
+.search-filter-sort-component,
+.js-calc-search-filter-sort-component {
 	// Must be more than table header so filter button can overlap
 	z-index: 1;
 	position: fixed;
