--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerTableAndRows.scss
@@ -32,6 +32,10 @@
 		background-color: $very-light-gray;
 	}
 
+	.list-table__row--selected {
+		background-color: $less-light-gray;
+	}
+
 	.list-table__row--empty {
 		height: $list-item-table-row-height + ($list-item-table-row-height * 0.5);
 	}
@@ -76,32 +80,34 @@
 
 	.list-table__data {
 		@include border-line();
+		@include stop-text-selection();
+
 		padding: 0px 7px 0px 7px;
 		cursor: default;
 	}
 
 	.list-table__data--name {
-		width: $list-table-item-name-width;
+		/* width: $list-table-item-name-width; */
 		max-width: $list-table-item-name-width;
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
 	}
 
-	.list-table__data--blue {
+	.list-table__data--project-color {
 		color: $blue-link;
 	}
 
-	.list-table__data--red {
+	.list-table__data--bug-color {
 		color: $red-link;
 	}
 
-	.list-table__data--completed {
+	.list-table__data--completed-color {
 		color: $status-green;
 	}
 
 	.list-table__data__info__completed-icon {
-		margin-left: 5px;
+		margin-right: 5px;
 		color: $status-green;
 	}
 
@@ -117,7 +123,7 @@
 		background-color: gray;
 		color: white;
 		height: $status-box-height;
-		width: 115px;
+		width: 110px;
 	}
 
 	.list-table__data__centering-container__status-box--purple {
