--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -9,7 +9,7 @@ $dark-blue-teal: #50798b;
 // Grays
 $very-light-gray: #f5f5f5;
 $light-gray: #e5e5e5;
-$medium-lighter-gray: #e4e4e4;
+$less-light-gray: #dddddd;
 $medium-light-gray: #bfbfbf;
 $medium-gray: #919191;
 $dark-gray: #808080;
@@ -27,6 +27,8 @@ $bright-red: #fc1e1e;
 $dark-red: #d36464;
 $darker-red: #d84848;
 $red-link: #f34242;
+// Greens
+$light-green: #ccf5cc;
 // Components
 $search-filter-sort-bar-color: $light-gray;
 $list-table-background-color: #ffffff;
@@ -59,7 +61,7 @@ $edit-item-description-item-box-height: 300px;
 $edit-account-modal-width: 540px;
 $filter-button-width: 90px;
 $list-table-min-width: 1100px;
-$list-table-item-name-width: 100px;
+$list-table-item-name-width: 250px;
 $create-item-sidebar-width: 500px;
 $item-container-list-sidebar-width: 275px;
 $expand-minimize-button-width: 25px;
