Changed database tables for priorty and status to have empty options say None instead and created frontend logic to figure out which option to gray out

--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -36,7 +36,7 @@ $list-table-background-color: #ffffff;
 $status-gray: $dark-gray;
 $status-purple: #9a82d8;
 $status-blue: #568dd5;
-$status-orange: #f59f3c;
+$status-orange: #ee8937;
 $status-green: #007e00;
 $status-red: #d14242;
 
