--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerTableAndRows.scss
@@ -176,3 +176,8 @@
 		color: gray;
 	}
 }
+
+.list-table-component--no-scroll {
+	overflow-y: hidden !important;
+	overflow-x: hidden !important;
+}
