Added the color for status-boxes into the database with frontend using it to set their color

--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -34,9 +34,9 @@ $search-filter-sort-bar-color: $light-gray;
 $list-table-background-color: #ffffff;
 // Status colors
 $status-gray: $dark-gray;
-$status-purple: #9a82d8;
 $status-blue: #568dd5;
-$status-orange: #ee8937;
+$status-purple: #9680ce;
+$status-orange: #ff9900;
 $status-green: #007e00;
 $status-red: #d14242;
 
@@ -49,7 +49,7 @@ $search-filter-sort-bar-height: 52px;
 $search-filter-sort-bar-button-height: 28px;
 $list-search-bar-height: 28px;
 $list-item-table-row-height: 50px;
-$status-box-height: 25px;
+$status-box-height: 27px;
 $create-item-sidebar-height: 700px;
 $top-bar-height: 52px;
 $edit-item-name-input-height: 43px;
