--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerDisplayInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerDisplayInfo.scss
@@ -33,18 +33,24 @@
 		position: relative;
 		display: inline-block;
 		margin-left: $display-item-field-margin-left;
-		background-color: $status-gray;
+		// This background color should only appear if there was a problem
+		// ...assigning a different background color to a status-box
+		background-color: black;
 		color: white;
 		height: $status-box-height;
 		width: 110px;
 	}
 
-	.item-box__group__field__status-box--purple {
-		background-color: $status-purple;
+	.item-box__group__field__status-box--gray {
+		background-color: $status-gray;
 	}
 
 	.item-box__group__field__status-box--blue {
 		background-color: $status-blue;
+	}
+
+	.item-box__group__field__status-box--purple {
+		background-color: $status-purple;
 	}
 
 	.item-box__group__field__status-box--orange {
