Added last five bugs funcitonality to the project item container

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerDisplayInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerDisplayInfo.scss
@@ -39,7 +39,7 @@
 		background-color: black;
 		color: white;
 		height: $status-box-height;
-		width: 110px;
+		width: $status-box-width;
 	}
 	
 	.item-box__group__field__status-box__centered-content {
