--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -62,6 +62,7 @@ $edit-account-modal-width: 540px;
 $filter-button-width: 90px;
 $list-table-min-width: 1100px;
 $list-table-item-name-width: 250px;
+$status-box-width: 110px;
 $create-item-sidebar-width: 500px;
 $item-container-list-sidebar-width: 275px;
 $expand-minimize-button-width: 25px;
