Added pie chart for the status of a project's bugs

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
@@ -80,7 +80,11 @@
 	}
 
 	.item-box--desciption-info-height {
-		height: $edit-item-description-item-box-height;
+		height: $edit-item-description-info-item-box-height;
+	}
+
+	.item-box--project-bugs-stats-height {
+		height: $edit-item-project-bugs-stats-item-box-height;
 	}
 
 	// Used in ItemContainerEditInfo to calculate description size using JS
